# VEXIS-1.1

./: .gitignore  CONTRIBUTING.md  DEPENDENCY_INSTALLER_FIXES.md  LICENSE  README.md  SECURITY.md  SETUP.md  USAGE.md  config.yaml  minimal_dependency_checker.py  pyproject.toml  requirements-core.txt  requirements-optional.txt  requirements.txt  run.py  test_dependency_installer.py  test_interactive_menu.py  test_menu_simple.py
VEXIS-1/: README.md  config.yaml  pyproject.toml  run.py
VEXIS-1/docker/: README.md
VEXIS-1/scripts/install/: detect_os_and_install.ps1  detect_os_and_install.sh
VEXIS-1/src/ai_agent/: __init__.py
VEXIS-1/src/ai_agent.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
VEXIS-1/src/ai_agent/core_processing/: command_parser.py
VEXIS-1/src/ai_agent/external_integration/: __init__.py  model_runner.py  vision_api_client.py
VEXIS-1/src/ai_agent/platform_abstraction/: screenshot_capture.py
VEXIS-1/src/ai_agent/user_interface/: __init__.py  two_phase_app.py
VEXIS-1/src/ai_agent/utils/: __init__.py  config.py  exceptions.py  logger.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  INSTALLATION.md
src/ai_agent/: __init__.py
src/ai_agent.egg-info/: PKG-INFO
src/ai_agent/core_processing/: __init__.py  task_generator.py  two_phase_engine.py
src/ai_agent/external_integration/: google_provider.py  model_runner.py  vision_api_client.py
src/ai_agent/platform_abstraction/: __init__.py  gui_automation.py
src/ai_agent/user_interface/: main_app.py
src/ai_agent/utils/: config.py  dependency_checker.py  interactive_menu.py  settings_manager.py
